--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  outline: 0;
+  outline: 1px solid #000;
   text-decoration: none;
   box-sizing: border-box;
   list-style: none;
@@ -850,6 +850,7 @@ body {
   justify-content: space-between;
   align-items: start;
   max-width: 750px;
+  padding-left: 20px;
 }
 .section-6__avatar {
   width: 150px;
@@ -898,6 +899,7 @@ body {
   line-height: 140%; /* 22.4px */
 }
 .section-6__right {
+  margin-right: 20px;
   display: flex;
   width: 295px;
   padding: 30px;
@@ -908,6 +910,8 @@ body {
   background: rgba(59, 59, 59, 0.5);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  color: #FFF;
+  font-family: cursive;
 }
 .section-6__info {
   gap: 30px;
@@ -1038,6 +1042,85 @@ body {
   line-height: 140%; /* 22.4px */
 }
 
+.section-8 {
+  width: 100%;
+}
+.section-8__form {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1050px;
+  padding: 60px;
+  border-radius: 20px;
+  background: #3B3B3B;
+}
+.section-8__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  max-width: 425px;
+}
+.section-8__right-title {
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 45.6px */
+  text-transform: capitalize;
+}
+.section-8__right-descr {
+  color: var(--White, #FFF);
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+  padding: 15px 0 30px 0;
+}
+.section-8__right-input {
+  display: flex;
+  height: 60px;
+  padding: 16px 20px 16px 20px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Text, #FFF);
+  color: var(--Background, #2B2B2B);
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.section-8__btn-input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+}
+.section-8__btn {
+  display: flex;
+  height: 50px;
+  padding: 0px 30px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 15px;
+  background: var(--Call-to-Action, #A259FF);
+  color: #FFF;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+
 /* Стилі для великих екранів (дисплей максимум 1199рх) */
 @media (max-width: 1199px) {
   .section-2 {
@@ -1087,6 +1170,12 @@ body {
   }
   .section-5__box-block-img {
     width: 315px;
+  }
+  .section-8 {
+    padding: 20px;
+  }
+  .section-8__form {
+    gap: 10px;
   }
 }
 /* Стилі для середніх екранів (дисплей максимум 991рх) */
@@ -1235,6 +1324,45 @@ body {
   }
   .section-5__box-block-img {
     width: 300px;
+  }
+  .section-8__btn-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .section-8__form {
+    display: flex;
+    max-width: 690px;
+    padding: 40px 30px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .section-8__right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+  }
+  .section-8__right-title {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+  .section-8__right-descr {
+    color: var(--White, #FFF);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+  .section-8__img {
+    max-width: 340px;
   }
 }
 @media (max-width: 955px) {
@@ -1416,8 +1544,12 @@ body {
   .section-5__box-block-img {
     width: 350px;
   }
+  .section-7__top {
+    margin: 0 auto;
+  }
   .section-7__box {
     max-width: 400px;
+    margin: 0 auto;
   }
 }
 @media (max-width: 680px) {
@@ -1481,6 +1613,18 @@ body {
     font-style: normal;
     font-weight: 600;
     line-height: 140%; /* 22.4px */
+  }
+  .section-8__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .section-8__right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 @media (max-width: 621px) {
@@ -1790,13 +1934,14 @@ body {
 @media (max-width: 410px) {
   .section-7__top {
     padding-left: 20px;
-    border: 1px solid #000;
   }
   .section-7__box {
     padding: 0px;
     padding-left: 7px;
     max-width: 320px;
-    border: 1px solid #000;
+  }
+  .section-8__form {
+    background: var(--Background, #2B2B2B);
   }
 }
 @media (max-width: 385px) {
@@ -1865,8 +2010,14 @@ body {
     width: 310px;
     transform: translateX(-10px);
   }
+  .section-7__card {
+    margin: 0 auto;
+  }
+  .section-8__img {
+    max-width: 300px;
+  }
 }
-@media (max-width: 350px) {
+@media (max-width: 352px) {
   .section-2 {
     transform: translateX(-7px);
   }
@@ -1879,5 +2030,34 @@ body {
   .section-5__top-btn {
     margin-left: 5px;
     padding: 0 25px;
+  }
+  .section-6__left {
+    width: 190px;
+  }
+  .section-6__title {
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%; /* 45.6px */
+    text-transform: capitalize;
+  }
+  .section-6__right {
+    max-width: 190px;
+  }
+  .section-7__card {
+    max-width: 250px;
+  }
+  .section-8__img {
+    width: 250px;
+  }
+}
+@media (max-width: 332px) {
+  .section-5__box-block {
+    max-width: 270px;
+  }
+  .section-5__box-block-img {
+    max-width: 270px;
   }
 }/*# sourceMappingURL=style.css.map */
