--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  outline: 1px solid #000;
+  outline: 0;
   text-decoration: none;
   box-sizing: border-box;
   list-style: none;
